--- a/css/responsive.css
+++ b/css/responsive.css
@@ -864,11 +864,59 @@
         margin-top: -150px;
         padding-top: 0;
     }
-    .media-post-content h2{
+    .media-post-content h2 {
         font-size: 16px;
     }
-    .date-publisher p{
-        font-size:12px !important;
+    .date-publisher p {
+        font-size: 12px !important;
+    }
+    /* trumodity page============================ */
+    .banner-trumodity .title-image {
+        max-width: 200px;
+    }
+    .what-is-trumodity {
+        padding: 50px 0;
+    }
+    .about-trumodity {
+        font-weight: 600;
+    }
+    .about-trumodity .title-img {
+        margin: 0 auto;
+        display: block;
+        margin-bottom: 50px;
+    }
+    .mobile-app-features {
+        padding: 50px 0;
+        background: #ffffff;
+        margin-bottom: 100px;
+    }
+    .mobile-app-features .container {
+        background: #ffffff;
+        padding: 20px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+        max-width: 80%;
+        border-radius: 20px;
+    }
+    .mobile-app-features .title {
+        text-align: center !important;
+    }
+    .product-details.product-details-2 {
+        margin-top: 0;
+        background: #f4f4f4;
+        padding-bottom: 40px;
+    }
+    .product-details.product-details-2:after{
+        content: none;
+    }
+    .product-details-2 .title-image-wrapper {
+        top: -150px;
+    }
+    .product-details-2 .title-image-wrapper+.title {
+        margin-bottom: 0px;
+        margin-top: -100px;
+    }
+    .product-details-2 .product-details .product-list {
+        margin-top: 35px;
     }
 }
 
@@ -996,17 +1044,17 @@
     .media-kit-download h2.title+p {
         max-width: 100%;
     }
-    .media-tabs-content .row{
+    .media-tabs-content .row {
         margin-left: 5px;
         margin-right: 5px;
     }
-    .media-tabs-content .row [class*="col"]{
+    .media-tabs-content .row [class*="col"] {
         padding-left: 5px;
         padding-right: 5px;
-        flex:0 0 100%;
+        flex: 0 0 100%;
         max-width: 100% !important;
     }
-    .media-releases .media-post{
+    .media-releases .media-post {
         max-width: 275px;
         margin: 0 auto;
         margin-bottom: 20px;
