--- a/css/style.css
+++ b/css/style.css
@@ -1959,7 +1959,8 @@ footer .social-media ul li:hover img {
 .media-tabs-content.active {
     display: block !important;
 }
-.media-tabs-content .owl-nav{
+
+.media-tabs-content .owl-nav {
     max-width: 150px;
     margin: 0 auto;
     display: flex;
@@ -1967,22 +1968,23 @@ footer .social-media ul li:hover img {
     font-size: 35px;
     color: #00ab14;
     margin-top: 50px;
-
 }
+
 .media-tabs-content .owl-nav button {
     display: flex !important;
     width: 35px;
     height: 35px;
     justify-content: center;
     align-items: center;
-
-    border:2px solid #00ab14 !important;
+    border: 2px solid #00ab14 !important;
     border-radius: 50% !important;
 }
-.media-tabs-content .owl-nav button span{
+
+.media-tabs-content .owl-nav button span {
     position: relative;
     top: -3px;
 }
+
 .media-post-content {
     position: absolute;
     top: 0;
@@ -1990,7 +1992,6 @@ footer .social-media ul li:hover img {
     width: 100%;
     height: 100%;
     padding: 5%;
-
 }
 
 .date-publisher {
@@ -2040,4 +2041,117 @@ footer .social-media ul li:hover img {
 .media-kit-download+.img-fluid+.home-contact {
     margin-top: -200px;
     padding-top: 0;
+}
+
+
+/* trumodity page================== */
+
+.banner-trumodity {
+    background-image: url(../images/trumodity/trumodity-banner.png) !important;
+}
+
+.banner-trumodity .title-image {
+    max-width: 250px;
+    padding-bottom: 15px;
+    margin-bottom: 10px;
+}
+
+.what-is-trumodity {
+    padding: 75px 0;
+}
+
+.about-trumodity .title-img {
+    margin-left: 5%;
+    max-width: 300px;
+    margin-bottom: 30px;
+}
+
+.mobile-app-features {
+    padding: 75px 0;
+    background-color: #f6f6f6;
+}
+
+.mobile-app-features .img-fluid {
+    width: auto !important;
+    margin: 0 auto;
+}
+
+.app-img-list .owl-dots .owl-dot span {
+    background: transparent;
+    border: 1px solid;
+}
+
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
+    background: #f5b70f;
+    border-color: #f5b70f;
+    ;
+}
+
+.mobile-app-features .mobile-app-content {
+    padding-left: 30px;
+    padding-top: 30px;
+}
+
+.mobile-app-content .features-list {
+    margin-top: 60px;
+}
+
+.mobile-app-content .features-list li {
+    margin-bottom: 40px;
+    position: relative;
+}
+
+.mobile-app-content .features-list li:before {
+    content: "";
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    left: -30px;
+    top: 5px;
+    background: #f5b70f;
+    border-radius: 50%;
+}
+
+.product-details.product-details-2 {
+    padding-top: 0;
+    background-color: transparent;
+    margin-top: -240px;
+    padding-bottom: 100px;
+}
+
+.product-details-2::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    left: 0;
+    background: #ffffff;
+}
+
+.product-details-2 .title-image-wrapper {
+    text-align: center;
+    padding-bottom: 20px;
+    position: relative;
+    margin-bottom: 60px;
+}
+
+.product-details-2 .title-image-wrapper::after {
+    content: "";
+    position: absolute;
+    width: 75px;
+    background-color: #fbbd1a;
+    height: 4px;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+}
+
+.product-details-2 .title-image-wrapper+.title {
+    margin-bottom: 50px;
+}
+
+.product-details-2 .title-image-wrapper+.title span:after {
+    content: none;
 }
