--- a/css/responsive.css
+++ b/css/responsive.css
@@ -318,6 +318,9 @@
         text-align: center;
         margin-bottom: 20px;
     }
+    .company-stats .stats-box .img-wrapper {
+        min-height: 80px;
+    }
     .company-stats .stats-box img {
         margin-bottom: 10px;
         max-width: 50px;
