--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,6 +17,15 @@
     .media-post-content h2 {
         font-size: 25px;
     }
+    /* trumodity page================== */
+    .slider_circle_10 .prev1,
+    .slider_circle_10 .next1 {
+        width: 30%;
+    }
+    .slider_circle_10 .active {
+        margin-left: -20%
+    }
+    
 }
 
 @media(max-width:991px) {
@@ -1138,6 +1147,53 @@
     .about-grainchain-inc.about-grainchain-inc-team+.home-contact-2 {
         margin-top: -80px;
     }
+     /* trumodity page================== */
+     .mobile-app-features .title span:after{
+         transform: translateX(-50%) !important;
+     }
+     .slider_circle_10 .prev1,
+     .slider_circle_10 .next1 {
+         width: 35%;
+     }
+     .slider_circle_10 .active {
+        margin-left: 0;
+        width: 50%;
+        transform: translateX(-50%);
+     }
+   
+    
+
+     .slider_circle_10 .next1 {
+        margin-left: 0;
+        left: auto;
+        right: 15%;
+    }
+    .slider_circle_10 .prev1 {
+        margin-left: 0;
+        left: 15%;
+    }
+    .app-img-list {
+        height: 550px;
+    }
+    .app-img-list .active{
+        overflow: visible;
+    }
+     .app-img-list p{
+         display: none;
+         font-size: 14px;
+         position: absolute;
+         width: 200%;
+         left: 50%;
+         transform:translateX(-50%);
+         padding: 0 15%;
+         padding-top: 20px;
+     }
+     .app-img-list .active p{
+         display: block;
+     }
+     .app-img-list .next_button, .app-img-list .prev_button{
+         bottom: 0;
+     }
 }
 
 @media(min-width:768px) {
@@ -1313,4 +1369,13 @@
     .banner-producer {
         background-image: url(../images/producer/producer-banner-mobile.png) !important;
     }
+
+    /* trumodity=================== */
+    .app-img-list {
+        height: calc(100vw * 1.1);
+    }
+    .app-img-list p{
+        font-size: 13px;
+    }
+
 }
